# sdl_game

./: .clangd  .gitignore  .vcpkg.json  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
include/: Component.hpp  Entity.h  Event.hpp  Game.h  Time_interval.h  collision_logic.h  common.h  dev_tools.h  draw.h  entity_derivations.h  game.h  game_components.h  game_logic.h  gui.h  physics_system.h  print.hpp  solvers.h  structs.h  structs.hpp  utl.h  xml.h
include/templated/: Vector2.hpp
source/: Entity.cpp  Game.cpp  SDL_main.cpp  collision_logic.cpp  dev_tools.cpp  draw.cpp  entity_derivations.cpp  game.cpp  game_components.cpp  game_logic.cpp  gui.cpp  gui.cxx  physics_system.cpp  sdlmain.cpp  solvers.cpp  structs.cpp  utl.cpp
